# mission-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run.py
docs/: FOLDER-STRUCTURE.md  GUIDE.md
server/: config.py  db.py  main.py
server/agent/: llm.py  loop.py  tools.py  validators.py
server/engine/: czml_converter.py  gmat_engine.py  gmat_runner.py  groundtrack.py  object_model.py  report_parser.py
server/prompts/: script_gen.md  system.md
server/routes/: chat.py  engine.py  missions.py  sessions.py
server/templates/: deorbit_lifetime.script  ground_contact.script  hohmann_transfer.script  leo_propagate.script  manifest.yaml  sunsync_design.script
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  Panel.tsx  Spinner.tsx  Tabs.tsx  ThemeToggle.tsx
web/src/features/chat/: ChatPanel.tsx
web/src/features/controls/: ControlBar.tsx
web/src/features/output/: GroundTrack.tsx  OrbitView.tsx  ReportTable.tsx
web/src/features/resources/: ResourceTree.tsx
web/src/features/script/: ScriptPanel.tsx
web/src/features/sequence/: SequencePanel.tsx
web/src/lib/: api.ts  ws.ts
web/src/store/: useStore.ts
web/src/styles/: globals.css
web/src/types/: index.ts
