[project]
name = "mission-agent"
version = "0.1.0"
description = "AI-native spacecraft mission design platform on NASA GMAT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "jinja2>=3.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
